# FrameWRK

./: .env.aws.example  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/data/: nuvia_ops.json
backend/app/models/: schemas.py
backend/app/monitoring/: logging.py
backend/app/routers/: admin.py  automation.py  health.py  llm.py  ops.py  rag.py  rag_chat.py
backend/app/services/: anthropic_provider.py  automation_service.py  embeddings.py  llm_provider.py  ollama_provider.py  openai_provider.py  ops_service.py  rag_pipeline.py  vectorstore.py
backend/app/storage/: db.py  migrations.sql
backend/tests/: test_api.py  test_automation_service.py  test_demo_walkthrough.py  test_embeddings.py  test_generate_docs_script.py  test_health.py  test_ops.py  test_ops_service.py  test_rag_pipeline.py  test_vectorstore.py
deploy/aws/scripts/: run_on_aws.sh
deploy/aws/terraform/: main.tf  variables.tf
docs/: demo-questions.md  rag-playbook.md  rag-system.md  workflow-automation-ideas.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx  styles.css
frontend/app/admin/: page.tsx
frontend/lib/: api.ts
scripts/: demo_walkthrough.py  generate_docs.py  ingest.py  offline_bootstrap.py  offline_eval.sh
scripts/mock_docs/: anesthesia_emergency_protocol.md  implant_inventory_guide.md  post_op_recovery.txt  pre_op_protocol.md  sedation_event_log.json
scripts/seed_docs/: sample.md
(+3 files in other folders)
